2023-09-29 Albert Chu <chu11@llnl.gov>

	* README: add rpm build notes

2023-09-28 Albert Chu <chu11@llnl.gov>

	* configure.ac: temporarily set version to 1.7.0 for user to
	experiment with installed build.

	* README: add some build notes / help.

2023-09-05 Felip Moll <felip.moll@schedmd.com>

	* libfreeipmi/driver/ipmi-openipmi-driver.c (_openipmi_read):
	Convert from select() to poll() to avoid issues with high number
	of open file descriptors when next fd > 1024. (GNU bug #64721).

2023-09-05 Albert Chu <chu11@llnl.gov>

	* Globally fix various typos.

2023-09-05 MIYAZAKI Yasushi (on Savannah)

	* configure.ac: Add define definitions for `exp10', `exp2', `log2'
	to config.h.in.

	* configure.ac: Add define definition for `cbrt' in math library
	to config.h.in

	* configure.ac: 'inb' and `outb' may be defined as inline
	functions (ex. glibc 2.28 on debian buster (amd64)), so check with
	AC_CHECK_DECL instead of AC_CHECK_FUNCS . Due to `Fix build issue
	when inb/outb are not available on some systems' in 1.6.9 release,
	the previously working kcs driver was causing errors.

2023-09-05 Albert Chu <chu11@llnl.gov>

	* man/ipmi-oem.8.pre.in: Document support on Supermicro X9DRD.

2023-09-04 Albert Chu <chu11@llnl.gov>

	* ipmi-oem/ipmi-oem-supermicro.c
	(ipmi_oem_supermicro_get_power_supply_status2): Fix comment typo.

2023-09-02 Albert Chu <chu11@llnl.gov>

	* man/Makefile.am: Fix make distcheck.

2023-09-02 Albert Chu <chu11@llnl.gov>

	* man/ipmi-config.8.pre.in: Add pointer to ipmi-config.conf(5)
	manpage so users know to look there.

2023-08-29 Albert Chu <chu11@llnl.gov>

	* common/miscutil/fi_hostlist.c: Fix compiler warnings.

2023-08-28 Albert Chu <chu11@llnl.gov>

	* common/miscutil/hostlist.[ch]: Update to version from pdsh to
	eliminate compiler warnings.

	* common/miscutil/fi_hostlist.c: Fix some compiler warnings,
	copying style fix from hostlist.c.

2023-08-27 Albert Chu <chu11@llnl.gov>
