@@ -216,6 +216,13 @@
 #
 ##########################################################################################################
 #
+## IPMI_Physical_Security_State
+#
+# IPMI_Physical_Security_State_Deasserted     Nominal
+# IPMI_Physical_Security_State_Asserted       Critical
+#
+##########################################################################################################
+#
 ## IPMI_Platform_Security_Violation_Attempt
 #
 # IPMI_Platform_Security_Violation_Attempt_Secure_Mode_Violation_Attempt                      Critical
