@@ -227,6 +227,14 @@
 #
 ##########################################################################################################
 #
+## IPMI_Physical_Security_State
+#
+# IPMI_Physical_Security_State_No_Event       Nominal
+# IPMI_Physical_Security_State_Deasserted     Nominal
+# IPMI_Physical_Security_State_Asserted       Critical
+#
+##########################################################################################################
+#
 ## IPMI_Platform_Security_Violation_Attempt
 #
 # IPMI_Platform_Security_Violation_Attempt_No_Event                                           Nominal
